--- a/index.html
+++ b/index.html
@@ -15,39 +15,43 @@
             margin: 0;                    
             display: flex;                
             flex-direction: column; 
-            /* Pushes content to the bottom of the viewport */
             justify-content: flex-end;    
             align-items: center;          
         }
 
-        /* --- New style for the added image to ensure it's displayed correctly --- */
-        .centered-image {
-            max-width: 100%; /* Ensures image doesn't stretch beyond viewport width */
+        .centered-image img { 
+            max-width: 150px; 
             height: auto;
-            margin-bottom: 10px; /* Small space between the image and the link text */
+            margin-bottom: 5px; 
+            display: block; 
         }
-        /* ------------------------------------------------------------------------ */
 
         .enter-link {
-            font-size: 2.5em;
-            color: red;
+            font-size: 1.5em;
+            /* --- Changes for white text in a red box --- */
+            color: white; /* Changed text color to white */
+            background-color: red; /* Added a red background */
+            padding: 10px 20px; /* Added padding inside the red box */
+            border-radius: 5px; /* Slightly rounded corners for the box */
+            /* --- End changes --- */
+
             text-align: center; 
-            padding-bottom: 30px;
+            margin-bottom: 20px; /* Use margin-bottom instead of padding-bottom for the div */
             font-weight: 900;
-            text-shadow: 0px 0px 10px black, 0px 0px 5px black; 
+            /* Removed text-shadow as it's less necessary with a solid background */
             text-transform: uppercase;
-            letter-spacing: 2px;
+            letter-spacing: 1px; 
             white-space: nowrap; 
         }
 
         .enter-link a {
-            color: red;
+            color: white; /* Ensures the link itself is white */
             text-decoration: underline;
             transition: color 0.3s;
         }
 
         .enter-link a:hover {
-            color: white;
+            color: black; /* Changed hover color to black for contrast against red */
             cursor: pointer;
         }
     </style>
