--- a/index.html
+++ b/index.html
@@ -19,23 +19,31 @@
             margin: 0;                    
             display: flex;                
             flex-direction: column; 
+            /* Pushes content to the bottom (this remains) */
             justify-content: flex-end;    
             align-items: center;          
         }
+
+        /* --- NEW WRAPPER TO CONTROL BOTH ELEMENTS --- */
+        .bottom-content-wrapper {
+            /* Adjust this value (100px) to move the entire block higher or lower */
+            margin-bottom: 100px; 
+            display: flex; /* Use flex to align the image and link containers */
+            flex-direction: column; /* Stack them vertically */
+            align-items: center; /* Center them horizontally */
+        }
+        /* ------------------------------------------- */
 
         /* Styling for the small image - Forced small size */
         .centered-image img { 
             width: 50px !important;
             height: auto !important;
-            margin-bottom: 5px; 
+            margin-bottom: 5px; /* Small space between image and text box */
             display: block; 
         }
 
-        /* Container for the text block */
+        /* Container for the text block (no margin-bottom needed here anymore) */
         .link-container {
-            /* --- KEY CHANGE: Increased margin-bottom to move the block up --- */
-            margin-bottom: 100px; /* Adjust this value (e.g., 50px, 150px) to fine-tune the position */
-            /* ------------------------------------------------------------------ */
             text-align: center; 
             font-weight: 900;
             text-transform: uppercase;
@@ -67,14 +75,17 @@
     </style>
 </head>
 <body style="background-image: url('https://i.ibb.co/5hJcsYMW/Test.jpg'); background-size: 80% auto; background-repeat: no-repeat; background-position: center;">
-    <div class="centered-image">
-        <img src="https://urlto.me/1RrZ" alt="Image above the link">
-    </div>
     
-    <div class="link-container">
-        <span class="enter-link-box">
-            CLICK <a href="https://antifawatchuk.blogspot.com/p/far-left-extremist-antifa-organisations.html?m=1" target="_blank">HERE</a> TO ENTER
-        </span>
+    <div class="bottom-content-wrapper">
+        <div class="centered-image">
+            <img src="https://urlto.me/1RrZ" alt="Image above the link">
+        </div>
+        
+        <div class="link-container">
+            <span class="enter-link-box">
+                CLICK <a href="https://antifawatchuk.blogspot.com/p/far-left-extremist-antifa-organisations.html?m=1" target="_blank">HERE</a> TO ENTER
+            </span>
+        </div>
     </div>
 </body>
 </html>
